# fieldmid

./: README.md
landing-page/: package-lock.json  package.json
landing-page/app/: layout.tsx  not-found.tsx
landing-page/app/contact/: page.tsx
landing-page/app/dashboard/: page.tsx
landing-page/app/login/: page.tsx
landing-page/app/sign-up/: page.tsx
landing-page/app/signup/: page.tsx
landing-page/components/: auth-guard.tsx  guest-guard.tsx  header.tsx  hero-section.tsx  login-form.tsx  signup-form.tsx  technology-cloud.tsx
landing-page/components/ui/: textarea.tsx
landing-page/lib/: contact-messages.ts
mastra-agents/: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
mastra-agents/src/mastra/: index.ts
mastra-agents/src/mastra/agents/: compliance-agent.ts  escalation-agent.ts  summary-agent.ts  triage-agent.ts
mastra-agents/src/mastra/config/: models.ts
mobile-app/: README.md  app.json  global.css  global.d.ts  package-lock.json  package.json
mobile-app/app/: _layout.tsx  index.tsx
mobile-app/app/(auth)/: get-started.tsx  login.tsx  sign-up.tsx
mobile-app/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
mobile-app/components/: auth-screen-layout.tsx  external-link.tsx  logo.tsx  sign-in-form.tsx  sign-up-form.tsx  social-connections.tsx  themed-text.tsx
mobile-app/constants/: theme.ts
mobile-app/lib/: theme.ts
rust-edge/: .gitignore  Cargo.toml
rust-edge/src/: app.rs  cli.rs  config.rs  connector.rs  database.rs  demo.rs  main.rs  schema.rs  watcher.rs
(+4 files in other folders)
